--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset='UTF-8' lang='en'/>
 </head>
 <body>
+
+    <button class='rock'>ROCK</button>
+    <button class='paper'>PAPER</button>
+    <button class='scissors'>SCISSORS</button>
+
+    <h1>Results</h1>
+
+
     <script src='./logic.js'></script>
 </body>
 </html>
