completed game logic and updated ui

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 </head>
 <body>
 
-    <button class='rock'>ROCK</button>
-    <button class='paper'>PAPER</button>
-    <button class='scissors'>SCISSORS</button>
+    <button class='Rock'>ROCK</button>
+    <button class='Paper'>PAPER</button>
+    <button class='Scissors'>SCISSORS</button>
 
     <h1>Results</h1>
+        <div class = 'shoot'>
+        </div>
+        <div class = 'scoreboard'>
+        </div>
 
 
     <script src='./logic.js'></script>
